--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="heading">
             <h1>Teedji Ligourel</h1>
             <h3>Développeur Web/Graphiste</h3>
-            <a href="docs/Ligourelteedjicv.pdf" class="button1">Télécharger CV</a>
+            <a href="docs/Ligourelteedjicv.pdf" target="_blank" class="button1">Télécharger CV</a>
         </div>
     </section>
 
@@ -160,7 +160,7 @@
                 </a>
              </div>
              <div class="col-sm-4">
-                <a class="thumbnail" href="https://www.linkedin.com/in/teedji-ligourel-9b6b64178" target="_blank">
+                <a class="thumbnail" href="http://www.linkedin.com/in/teedjiligourel77130" target="_blank">
                       <img src="/images/LinkedIn-Logo-1024x509.jpg" alt="github share">
                 </a>  
             </div>
