ajout formulaire de contact

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                          <li><a href="#skills">Compétences</a></li>
                          <li><a href="#parcours">Etudes</a></li>
                          <li><a href="#projet">Liens</a></li>
+                         <li><a href="#contact">Contact</a></li>
                      </ul>
                  </div>
              </div>
@@ -172,6 +173,27 @@
          </div>
         
      </div>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <div class="white-divider"></div>
+            <div class="heading">
+                <h2>Contact</h2>
+            </div>
+        <form id="contact" method="post" action="">
+            <fieldset><legend>Vos coordonnées</legend>
+                             <p><label for="nom">Nom :</label><input type="text" id="nom" name="nom" /></p>
+                             <p><label for="email">Email :</label><input type="text" id="email" name="email" /></p>
+                             </fieldset>
+
+             <fieldset><legend>Votre message</legend>
+                             <p><label for="objet">Objet :</label><input type="text" id="objet" name="objet" /></p>
+                             <p><label for="message"></label><textarea id="message" name="message" cols="30" rows="8"></textarea></p>
+                             </fieldset>
+             <div style="text-align:center;"><input type="submit" name="envoi" value="Envoyer le formulaire !" /></div>                      
+        </form>
+        </div>
     </section>
 </body>
 </html>
