--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div class="heading">
                 <h2>Contact</h2>
             </div>
-        <form id="contact" method="post" action="">
+        <form id="contact" method="post" action="traitement_formulaire.php">
             <fieldset><legend>Vos coordonnées</legend>
                              <p><label for="nom">Nom :</label><input type="text" id="nom" name="nom" /></p>
                              <p><label for="email">Email :</label><input type="text" id="email" name="email" /></p>
