--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="heading">
             <h1>Teedji Ligourel</h1>
             <h3>Développeur Web/Graphiste</h3>
-            <a href="docs/Ligourelteedjicv.pdf" target="_blank" class="button1">Télécharger CV</a>
+            <a href="docs/Ligourel teedji_cv_développeur.docx" target="_blank" class="button1">Télécharger CV</a>
         </div>
     </section>
 
@@ -157,12 +157,12 @@
          <div class="row">
              <div class="col-sm-4">
                 <a class="thumbnail" href="https://github.com/MrChuckNovice" target="_blank">
-                        <img src="/images/github-1280x720.jpg" alt="github share">
+                        <img src="images/github-1280x720.jpg" alt="github share">
                 </a>
              </div>
              <div class="col-sm-4">
                 <a class="thumbnail" href="http://www.linkedin.com/in/teedjiligourel77130" target="_blank">
-                      <img src="/images/LinkedIn-Logo-1024x509.jpg" alt="github share">
+                      <img src="images/LinkedIn-Logo-1024x509.jpg" alt="github share">
                 </a>  
             </div>
             <div class="col-sm-4">
